--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "calendar-base": "^0.3.0",
+    "classnames": "^2.2.6",
     "moment": "^2.24.0",
     "react": "^16.7.0",
     "react-big-calendar": "^0.20.3",
+    "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
