--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "calendar-base": "^0.3.0",
     "classnames": "^2.2.6",
+    "firebase": "^5.8.4",
     "moment": "^2.24.0",
     "react": "^16.7.0",
     "react-big-calendar": "^0.20.3",
